# genre-scraper

./: Cargo.toml  README.md
src/: db.rs  main.rs  scrape.rs
