[package]
name = "genre-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
rusqlite = { version = "0.30.0", features = ["bundled"] }
scraper = "0.18.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1"